src/test/ui/traits/trait-bounds-not-on-bare-trait.stderr
warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/trait-bounds-not-on-bare-trait.rs:7:12
   |
LL | fn foo(_x: Foo + Send) {
   |            ^^^^^^^^^^ help: use `dyn`: `dyn Foo + Send`
   |
   = note: #[warn(bare_trait_objects)] on by default

error[E0277]: the size for values of type `(dyn Foo + std::marker::Send + 'static)` cannot be known at compilation time
  --> $DIR/trait-bounds-not-on-bare-trait.rs:7:8
   |
LL | fn foo(_x: Foo + Send) {
   |        ^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `(dyn Foo + std::marker::Send + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
